[package]
name = "speculoos"
version = "0.6.0"
authors = [
    "cfrancia <cfrancia@users.noreply.github.com>",
    "oknozor <paul.delafosse@protonmail.com>"
]
license = "Apache-2.0"
description = "Fluent test assertions"
repository = "https://github.com/oknozor/speculoos"
readme = "README.md"
keywords = ["fluent", "testing", "matchers", "assert", "assertions"]

[features]
default = ["num"]

[dependencies]
num = { version = "0.1.36", optional = true }